Test SSO implementation

--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -92,6 +92,10 @@
                                 <button type="submit" class="btn btn-primary btn-block">Acceder</button>
                             </div>
                         }
+
+                        <div class="text-center mt-3">
+                            <a href="/connect/authorize?client_id=client&redirect_uri=https%3A%2F%2Flocalhost%3A5002%2Fsignin-oidc&response_type=code&scope=openid%20profile%20api1&response_mode=form_post" class="btn btn-secondary btn-block">Iniciar Sesión con SSO</a>
+                        </div>
                     </div>
                 </div>
                 <div class="card-footer text-center pt-2 pb-3" style="background-color: #333333; color: #fff; margin-bottom: 30px;">
