--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -335,9 +335,10 @@
                                                 <span class="badge bg-info" style="float:left; margin-right: 10px;">Inscripciones: @(grupo.cupoActual)</span>
                                             }
                                         </div>
-                                        @if (ViewBag.Role == 1)
+                                        @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                         {
                                             <div style="float:right">
+                                                @Html.ActionLink("", "CopiarGrupo", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-dark bi bi-clipboard", @style = "padding-right:4px;" })
                                                 <i class="bi bi-pencil-square" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModalEditar(@grupo.idGrupo)" style="padding-right:4px;"></i>
                                                 @if (ViewBag.Role == 1)
                                                 {
@@ -526,9 +527,10 @@
                                     <div class="d-flex card-header justify-content-between align-items-start">
                                         <h4 class="mb-2">@grupo.nombre</h4>
                                         <div class="ms-2">
-                                            @if (ViewBag.Role == 1)
+                                            @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                             {
                                                 <div style="float:right">
+                                                    @Html.ActionLink("", "CopiarGrupo", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "text-dark bi bi-clipboard", @style = "padding-right:4px;" })
                                                     <i class="bi bi-pencil-square" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar" onclick="actualizarModalEditar(@grupo.idGrupo)" style="padding-right:4px;"></i>
                                                     @if (ViewBag.Role == 1)
                                                     {
