Se pueden enviar calificaciones del grupo

--- a/webMetics/Views/Asesor/CrearAsesor.cshtml
+++ b/webMetics/Views/Asesor/CrearAsesor.cshtml
@@ -13,7 +13,7 @@
 
 @if (ViewBag.Id != "" && ViewBag.Role == 1)
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
