--- a/webMetics/Views/Asesor/EditarAsesor.cshtml
+++ b/webMetics/Views/Asesor/EditarAsesor.cshtml
@@ -46,7 +46,7 @@
 <body>
     @if (ViewBag.Id != "" && (ViewBag.Role == 1 || ViewBag.Role == 2))
     {
-        <div class="contenedor-tipos-actividades container-fluid">
+        <div class="contenedor-caja container-fluid">
             @if (urlReferrer != null)
             {
                 <div class="d-flex justify-content-start mb-3">
