--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -13,7 +13,7 @@
 
 @if (!string.IsNullOrEmpty(ViewBag.Id))
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (ViewBag.ErrorMessage != null)
         {
             <div class="alert alert-dark alert-dismissible fade show" role="alert">
