--- a/webMetics/Views/Inscripcion/FormularioInscripcionManual.cshtml
+++ b/webMetics/Views/Inscripcion/FormularioInscripcionManual.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Role == 1 || ViewBag.Role == 2)
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (urlReferrer != null)
         {
             @if (ViewBag.Role == 1)
