--- a/webMetics/Views/Usuario/FormularioRegistro.cshtml
+++ b/webMetics/Views/Usuario/FormularioRegistro.cshtml
@@ -9,7 +9,7 @@
 
 @if (ViewBag.Title == "Formulario de Registro")
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
