--- a/webMetics/Views/Grupo/VerAdjunto.cshtml
+++ b/webMetics/Views/Grupo/VerAdjunto.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Id != "")
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
