--- a/webMetics/Views/Inscripcion/FormularioInscripcion.cshtml
+++ b/webMetics/Views/Inscripcion/FormularioInscripcion.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Role == 1 || ViewBag.Role == 2)
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-caja container-fluid">
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
