--- a/webMetics/Views/Usuario/CambiarCredencialesUsuario.cshtml
+++ b/webMetics/Views/Usuario/CambiarCredencialesUsuario.cshtml
@@ -42,7 +42,7 @@
 <body>
     @if (!string.IsNullOrEmpty(Model.id))
     {
-        <div class="contenedor-tipos-actividades container-fluid">
+        <div class="contenedor-caja container-fluid">
             @if (urlReferrer != null)
             {
                 <div class="d-flex justify-content-start mb-3">
