--- a/webMetics/wwwroot/css/site.css
+++ b/webMetics/wwwroot/css/site.css
@@ -23,8 +23,9 @@
     height: 50px;
 }
 
-.contenedor-tipos-actividades {
+.contenedor-caja {
     margin-top: 60px;
+    padding-bottom: 150px;
     margin-bottom: 150px;
     align-content: center;
 }
