--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -413,10 +413,10 @@
                                     <div class="mt-3">
                                         @if (ViewBag.Role == 1)
                                         {
-                                            <div style="margin-bottom: 20px;">
-                                                @Html.ActionLink("Inscribir participante", "FormularioInscripcionManual", "Inscripcion", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
+                                            <div class="mb-3">
+                                                @Html.ActionLink("    Inscribir participante", "FormularioInscripcionManual", "Inscripcion", new { idGrupo = grupo.idGrupo }, new { @class = "link link-primary bi bi-person-add", @style = "text-decoration:none;"})
                                             </div>
-                                            <div>
+                                            <div class="mb-2">
                                                 @Html.ActionLink("Ver participantes", "ListaParticipantes", "Participante", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
                                             </div>
 
@@ -471,7 +471,7 @@
                                         {
                                             <div>
                                                 <div class="d-flex align-items-center justify-content-center" type="button" data-bs-toggle="modal" data-bs-target="#modalEditarAdjunto" onclick="actualizarModalEditarAdjunto(@grupo.idGrupo)">
-                                                    @Html.ActionLink("   Editar programa del módulo", "EditarAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "bi bi-pencil-square text-secondary link-opacity-50 link-opacity-100-hover link-underline link-underline-opacity-0" })
+                                                    @Html.ActionLink("   Editar programa del módulo", "EditarAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "bi bi-pencil-square text-primary link-opacity-50 link-opacity-100-hover link-underline link-underline-opacity-0" })
                                                 </div>
                                             </div>
                                         }
@@ -636,14 +636,12 @@
                                                         <strong><a href="@grupo.enlace" target="_blank">Enlace de Mediación Virtual</a></strong>
                                                     </div>
                                                 }
-                                                <div>
-                                                    @Html.ActionLink("Inscribir participante", "FormularioInscripcionManual", "Inscripcion", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
-                                                </div>
                                             </div>
                                     </div>
-                                        <div class="mt-3 align-items-center text-center">
+                                        <div class="mt-3 align-items-center text-center d-flex flex-column">
                                         @if (ViewBag.Role == 1)
                                         {
+                                            @Html.ActionLink("    Inscribir participante", "FormularioInscripcionManual", "Inscripcion", new { idGrupo = grupo.idGrupo }, new { @class = "link link-primary bi bi-person-add mb-2", @style = "text-decoration:none;" })
                                             @Html.ActionLink("Ver participantes", "ListaParticipantes", "Participante", new { idGrupo = grupo.idGrupo }, new { @style = "color:white", @class = "btn btn-primary" })
                                         }
                                         else
@@ -697,7 +695,7 @@
                                         {
                                             <div>
                                                 <div class="d-flex align-items-center justify-content-center" type="button" data-bs-toggle="modal" data-bs-target="#modalEditarAdjunto" onclick="actualizarModalEditarAdjunto(@grupo.idGrupo)">
-                                                    @Html.ActionLink("   Editar programa del módulo", "EditarAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "bi bi-pencil-square text-secondary link-opacity-50 link-opacity-100-hover link-underline link-underline-opacity-0" })
+                                                    @Html.ActionLink("   Editar programa del módulo", "EditarAdjunto", "Grupo", new { idGrupo = grupo.idGrupo }, new { @class = "bi bi-pencil-square text-primary link-opacity-50 link-opacity-100-hover link-underline link-underline-opacity-0" })
                                                 </div>
                                             </div>
                                         }
