Upload button change

--- a/webMetics/Views/Medallas/ListaMedallas.cshtml
+++ b/webMetics/Views/Medallas/ListaMedallas.cshtml
@@ -44,7 +44,7 @@
                 <form method="post" enctype="multipart/form-data" asp-controller="Medallas" asp-action="SubirMedalla">
                     <div class="d-flex justify-content-between">
                         <input type="file" name="imageFile" class="form-control" />
-                        <button type="submit" class="btn btn-secondary ms-2 w-25"><i class="bi bi-plus-lg me-2"></i>Agregar</button>
+                        <button type="submit" class="btn btn-secondary ms-2"><i class="bi bi-upload"></i></button>
                     </div>
                 </form>
             </div>
