--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -77,7 +77,7 @@
                         <div class="card-header" id="medallasHeader">
                             <h3 class="mb-0">
                                 <button class="bi bi-chevron-down btn text-muted" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMedallas" aria-expanded="true" aria-controls="collapseMedallas">
-                                    Seleccionar Medallas
+                                    Asignar Medallas
                                 </button>
                             </h3>
                         </div>
@@ -89,13 +89,13 @@
 
                                     <div class="d-flex justify-content-between mb-3">
                                         <div class="input-group">
-                                            <input type="text" class="form-control" id="medallaSearch" onkeyup="filterMedals()" placeholder="Ingrese nombre de medalla">
+                                            <input type="text" class="form-control" id="medallaSearch" onkeyup="filterMedals()" placeholder="Ingrese el nombre de la medalla">
                                             <span class="input-group-text">
                                                 <i class="bi bi-search"></i>
                                             </span>
                                         </div>
                                         <div class="d-flex justify-content-end ms-3">
-                                            <button type="submit" class="btn btn-secondary justify-content-end">Asignar</button>
+                                            <button type="submit" class="btn btn-secondary justify-content-end bi bi-check-lg"></button>
                                         </div>
                                     </div>
 
