Cambio estilo botones aceptar

--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -257,7 +257,7 @@
                                                             {
                                                                 <div class="my-2 align-items-center justify-content-start d-lg-flex">
                                                                     <input type="number" min="0" class="form-control" style="max-width: 125px;" name="horasAprobadas">
-                                                                    <button type="submit" class="m-1 btn btn-outline-secondary">Aceptar</button>
+                                                                    <button type="submit" class="m-1 btn btn-secondary bi bi-check-lg"></button>
                                                                 </div>
                                                             }
                                                         </td>
@@ -267,7 +267,7 @@
                                                             {
                                                                 <div class="my-2 align-items-center justify-content-start d-lg-flex">
                                                                     <input type="number" min="0" , max="100" class="form-control" style="max-width: 125px;" name="calificacion" id="calificacion">
-                                                                    <button type="submit" class="m-1 btn btn-outline-secondary">Aceptar</button>
+                                                                    <button type="submit" class="m-1 btn btn-secondary bi bi-check-lg"></button>
                                                                 </div>
                                                             }
                                                         </td>
