Formularios y cambios en vistas para introducir opcion de recuperar contraseña

--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
 
 
-    @if (ViewBag.Id != "" && ViewBag.Title != "Formulario de Registro" && ViewBag.Title != "Iniciar sesión")
+    @if (ViewBag.Id != "" && ViewBag.Title != "Formulario de Registro" && ViewBag.Title != "Iniciar sesión" && ViewBag.Title != "Recuperar Contraseña")
     {
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
