--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -286,7 +286,7 @@
             <div class="d-flex my-4 justify-content-center">
                 @if (ViewBag.IdGrupo != null)
                 {
-                    <a href="@Url.Action("ListaParticipantes", "Participante", new { idGrupo = ViewBag.IdGrupo })" class="btn btn-secondary btn-block">Regresar a Grupo</a>
+                    <a href="@Url.Action("ListaParticipantes", "Participante", new { idGrupo = ViewBag.IdGrupo })" class="btn btn-secondary btn-block">Regresar a Módulo</a>
                 }
                 else {
                     <a href="@Url.Action("VerInscripciones", "Inscripcion")" class="btn btn-secondary btn-block">Regresar</a>
