--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -203,7 +203,7 @@
                             </td>
 
                             <td class="text-center">
-                                <span>@ViewBag.Participante.horasMatriculadas</span>
+                                <span>@(ViewBag.Participante.horasMatriculadas)</span>
                             </td>
 
                             <td class="text-center">
@@ -250,7 +250,7 @@
                                                         <td class="">@inscripcion.nombreGrupo (Grupo @inscripcion.numeroGrupo)</td>
                                                         <td class="">@inscripcion.estado</td>
 
-                                                        <td class="text-center">@((inscripcion.horasMatriculadas ?? 0))</td>
+                                                        <td class="text-center">@(((inscripcion.horasMatriculadas - inscripcion.horasAprobadas) ?? 0))</td>
                                                         <td class="text-center">@((inscripcion.horasAprobadas ?? 0))</td>
                                                         @using (Html.BeginForm("SubirHorasAprobadasYCalificacion", "Calificaciones", new { idGrupo = inscripcion.idGrupo, idParticipante = ViewBag.Participante.idParticipante }, FormMethod.Post))
                                                         {
