--- a/webMetics/Views/Participante/FormularioRecuperarContrasena.cshtml
+++ b/webMetics/Views/Participante/FormularioRecuperarContrasena.cshtml
@@ -45,8 +45,7 @@
     @if (ViewBag.Id != "")
     {
         <div class="contenedor-caja container-fluid">
-
-            @using (Html.BeginForm("RecuperarContrasena", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            @using (Html.BeginForm("RecuperarContrasena", "Participante", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 <h1>@ViewBag.Title</h1>
@@ -72,23 +71,21 @@
                         <div class="container">
                             <div class="row mt-1">
                                 <div class="col input-wrapper">
-                                    <label style="font-size: 22px">Correo electrónico</label> <a style="color:red;font-size:22px">*</a>
+                                    @Html.LabelFor(model => model.correo, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                                     @Html.TextBoxFor(model => model.correo, new { @class = "form-control", @type = "email", @placeholder = "Ingrese su correo electrónico" })
                                     @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="col input-wrapper">
-                                    <label style="font-size: 22px">Número de identificación</label> <a style="color:red;font-size:22px">*</a>
-                                    @Html.TextBoxFor(model => model.numeroIdentificacion, new { @class = "form-control", @placeholder = "Ingrese su número de identificación" })
+                                    @Html.LabelFor(model => model.numeroIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                    @Html.TextBoxFor(model => model.numeroIdentificacion, new { @class = "form-control", @placeholder = "Ingrese su número de identificación (Formato: 1-1234-4567)" })
                                     @Html.ValidationMessageFor(model => model.numeroIdentificacion, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
+                        <div class="text-center mt-3">
+                            <button type="submit" class="btn btn-primary btn-block">Acceder</button>
+                        </div>
                     </div>
-                </div>
-                <div class="d-flex justify-content-center my-4">
-                    <a href="@Url.Action("IniciarSesion", "Usuario", new { })" class="btn btn-primary btn-block">
-                        Regresar
-                    </a>
                 </div>
             }
         </div>
